feat(033): sauvegarder les corrections UI et les propriétés de bases
